...
    "action_cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "İptal"
...
    "category_hide": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Hide category"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Kategoriyi gizle"
...
    "catnav_title_series": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Series categories"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Dizi kategorileri"
...
    "catnav_pin": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Pin"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Sabitle"
...
